// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Language switcher renders the structure with empty language list 1`] = `
<DocumentFragment>
  <div
    class="widget-language-selector popupmenu"
  >
    <div
<<<<<<< HEAD
      aria-activedescendant=""
      aria-autocomplete="none"
      aria-controls=":r0:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Language selector"
      class="popupmenu-trigger popupmenu-trigger-alignment"
      data-floating-ui-inert=""
      role="combobox"
      tabindex="0"
=======
      class="popupmenu-trigger popupmenu-trigger-alignment"
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
    >
      <span
        class="current-language-text"
      />
      <span
        aria-hidden="true"
        class="language-arrow"
      >
        <div
<<<<<<< HEAD
          class="arrow-image arrow-up"
=======
          class="arrow-image arrow-down"
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
        />
      </span>
    </div>
    <div
<<<<<<< HEAD
      aria-activedescendant=""
      aria-orientation="vertical"
      class="popupmenu-menu"
      data-floating-ui-focusable=""
      id=":r0:"
      role="listbox"
      style="position: fixed; left: 0px; top: 0px; outline: 0; overflow-y: auto; transform: translate(0px, 0px);"
      tabindex="0"
=======
      class="popupmenu-menu popupmenu-position-left"
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
    />
  </div>
</DocumentFragment>
`;

exports[`Language switcher renders the structure with language list and selected default language 1`] = `
<DocumentFragment>
  <div
    class="widget-language-selector popupmenu"
  >
    <div
<<<<<<< HEAD
      aria-activedescendant=""
      aria-autocomplete="none"
      aria-controls=":r2:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Language selector"
      class="popupmenu-trigger popupmenu-trigger-alignment"
      data-floating-ui-inert=""
      role="combobox"
      tabindex="0"
=======
      class="popupmenu-trigger popupmenu-trigger-alignment"
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
    >
      <span
        class="current-language-text"
      >
        En us
      </span>
      <span
        aria-hidden="true"
        class="language-arrow"
      >
        <div
<<<<<<< HEAD
          class="arrow-image arrow-up"
=======
          class="arrow-image arrow-down"
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
        />
      </span>
    </div>
    <div
<<<<<<< HEAD
      aria-activedescendant=""
      aria-orientation="vertical"
      class="popupmenu-menu"
      data-floating-ui-focusable=""
      id=":r2:"
      role="listbox"
      style="position: fixed; left: 0px; top: 0px; outline: 0; overflow-y: auto; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="popupmenu-basic-item active highlighted"
        role="option"
        tabindex="0"
=======
      class="popupmenu-menu popupmenu-position-left"
    >
      <div
        class="popupmenu-basic-item active"
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
      >
        En us
      </div>
    </div>
  </div>
</DocumentFragment>
`;
